# BevyPlatformer

./: Cargo.toml
assets/: 1_bit_map.ldtk
src/: entity.rs  level.rs  main.rs
src/phys/: components.rs  mod.rs  systems.rs
