[package]
name = "Bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1" }
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk" }
bevy_rapier2d = { version = "0.26", features = [ "debug-render-2d" ]}


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
